# chatbot

./: .gitignore  README.md  pyproject.toml
ai_service/agents/: search_agent.py
ai_service/memories/: chat_memory.py
ai_service/prompts/: search_prompt.py
app/: api.py  main.py
app/services/: chat_service.py
app/utils/: chat_utils.py
